pipeline page header alignment fix

--- a/src/main/webapp/assets/css/salesken_style.css
+++ b/src/main/webapp/assets/css/salesken_style.css
@@ -1839,12 +1839,12 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 /* exclusive to pipeline----------- */
 .line {
-	width: 72%;
-	height: 1px;
-	border: 1px dashed #eeeeee;
-	position: absolute;
-	top: 11px;
-	left: 89px;
+	    width: 90%;
+    height: 1px;
+    border: 1px dashed #eeeeee;
+    position: absolute;
+    top: 11px;
+    left: 35px;
 }
 
 /* start of checkbox */
